<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
     android:orientation="vertical"
    android:background="@drawable/background">
	
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

   	<Button 
        android:id="@+id/riddles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/riddlesbutton"
    />
   	
 	<Button 
        android:id="@+id/createriddle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createriddlebutton"
    />
 	
 	<Button 
        android:id="@+id/rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rulesbutton"
    />
 	
    <Button 
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profilebutton"
    />



   

</LinearLayout>
