<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:shadowDx="-2"
        android:shadowDy="-3"
        android:shadowRadius="2"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold"
    />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
    >
        
    	<ImageView 
    	    android:id="@+id/logo"
    	    android:contentDescription="@string/logo"
        	android:src="@drawable/logo"
        	android:layout_width="250dp"
        	android:layout_height="wrap_content"
       	/>
    	<EditText
            android:id="@+id/emailaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            android:hint="@string/emailaddress"
            android:textColorHint="@color/black"
            android:inputType="textNoSuggestions" 
       	/>
    	
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            android:hint="@string/username"
            android:textColorHint="@color/black"
            android:inputType="textNoSuggestions" 
       	/>
        
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/black"      
            android:inputType="textPassword"
        />
        <EditText
            android:id="@+id/confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmpassword"
            android:textColorHint="@color/black"      
            android:inputType="textPassword"
        />
        
        <Button 
            android:id="@+id/confirmregistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerbutton"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="1"  
        >

        	<Button
	            android:id="@+id/cancel"
	            android:layout_width="0dp"
	            android:layout_height="fill_parent"
	            android:layout_weight=".5"
	            android:textSize="10dp"
	            android:text="@string/cancel"
            />
        	<Button 
	            android:id="@+id/login"
	            android:layout_width="0dp"
	            android:layout_height="fill_parent"
	            android:layout_weight=".5"
	            android:textSize="10dp"
	            android:text="@string/loginbutton"
            />    
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
