<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:shadowDx="-2"
        android:shadowDy="-3"
        android:shadowRadius="2"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold"
    />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
    >
        
    	<ImageView 
    	    android:id="@+id/logo"
    	    android:contentDescription="@string/logo"
        	android:src="@drawable/logo"
        	android:layout_width="250dp"
        	android:layout_height="wrap_content"
       	/>

    	<Spinner
    	    android:id="@+id/spinner1"
    	    android:layout_width="match_parent"
    	    android:layout_height="58dp" />
        
        <Button 
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginbutton"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="1"  
        >    

        	
        </LinearLayout>
       	<TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:shadowColor="@color/black"
	        android:shadowDx="-2"
	        android:shadowDy="-3"
	        android:shadowRadius="2"
	        android:text="@string/or"
	        android:textColor="@color/white"
	        android:textSize="25dp"
	        android:textStyle="bold"
	        android:layout_gravity="center_horizontal"
       	/>
   	    <Button 
	        android:id="@+id/facebookconnece"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="10dp"
	        android:text="@string/facebookconnect"
        />  
    </LinearLayout>

</LinearLayout>
