<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
> 

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/background"
	    android:orientation="vertical" >

		<TextView 
			android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:shadowColor="@color/black"
	        android:shadowDx="-2"
	        android:shadowDy="-3"
	        android:shadowRadius="2"
	        android:text="@string/firstriddle"
	        android:textColor="@color/white"
	        android:textSize="35dp"
	        android:textStyle="bold"    
		    
		/>
	    <EditText
	        android:id="@+id/riddle1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/firstriddle"
	        android:textColorHint="@color/black"
	        android:inputType="textNoSuggestions" 
		/>
	    <EditText
	        android:id="@+id/riddle1hint"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hint"
	        android:textColorHint="@color/black"
	        android:inputType="textNoSuggestions" 
		/>
	
	    <Button 
	        android:id="@+id/pinfirstriddle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/location"
	    />
	    <TextView 
			android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:shadowColor="@color/black"
	        android:shadowDx="-2"
	        android:shadowDy="-3"
	        android:shadowRadius="2"
	        android:text="@string/secondriddle"
	        android:textColor="@color/white"
	        android:textSize="35dp"
	        android:textStyle="bold"      
		/>
	    <EditText
	        android:id="@+id/riddle2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/secondriddle"
	        android:textColorHint="@color/black"
	        android:inputType="textNoSuggestions" 
		/>
	    <EditText
	        android:id="@+id/riddle2hint"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hint"
	        android:textColorHint="@color/black"
	        android:inputType="textNoSuggestions" 
		/>
	
	    <Button 
	        android:id="@+id/pinsecondriddle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/location"
	    />
	    <TextView 
			android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:shadowColor="@color/black"
	        android:shadowDx="-2"
	        android:shadowDy="-3"
	        android:shadowRadius="2"
	        android:text="@string/thirdriddle"
	        android:textColor="@color/white"
	        android:textSize="35dp"
	        android:textStyle="bold"      
		/>
	    <EditText
	        android:id="@+id/riddle3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/thirdriddle"
	        android:textColorHint="@color/black"
	        android:inputType="textNoSuggestions" 
		/>
	    <EditText
	        android:id="@+id/riddle3hint"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hint"
	        android:textColorHint="@color/black"
	        android:inputType="textNoSuggestions" 
		/>
	
	    <Button 
	        android:id="@+id/pinthirdriddle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/location"
	    />
	    
	   	<Button 
	        android:id="@+id/donebutton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/done"
	    />
	</LinearLayout>
</ScrollView>
