<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">

    <TextView
        android:id="@+id/riddleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:shadowDx="-2"
        android:shadowDy="-3"
        android:shadowRadius="2"
        android:text="@string/firstriddle"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold"
    />
 	<LinearLayout   
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"  
    android:weightSum="1">
	    <TextView
	        android:id="@+id/riddleTextView"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:shadowColor="@color/black"
	        android:shadowDx="-2"
	        android:shadowDy="-3"
	        android:shadowRadius="2"
	        android:text="@string/firstriddle"
	        android:textColor="@color/white"
	        android:textSize="30dp"
	        android:textStyle="bold"
	        android:layout_weight=".40"
	    />
	    <TextView
	        android:id="@+id/riddleHintTextView"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="top|center_vertical|center_horizontal"
	        android:shadowColor="@color/black"
	        android:shadowDx="-2"
	        android:shadowDy="-3"
	        android:shadowRadius="2"
	        android:textColor="@color/white"
	        android:textSize="30dp"
	        android:textStyle="bold"
	        android:layout_weight=".40"
	    />
	    <LinearLayout   
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    android:layout_weight=".20" 
	    android:weightSum="1">
		    <Button 
		        android:id="@+id/hintButton"
		        android:layout_width="0px"
		        android:layout_height="fill_parent"
		        android:layout_gravity="right"
		        android:text="@string/hint"
		        android:layout_weight=".33"
		    />
		    <Button 
		        android:id="@+id/skipButton"
		        android:layout_width="0px"
		        android:layout_height="fill_parent"
		        android:layout_gravity="right"
		        android:text="@string/skip"
		        android:layout_weight=".33"
		    />
		    <Button 
		        android:id="@+id/checkButton"
		        android:layout_width="0px"
		        android:layout_height="fill_parent"
		        android:layout_gravity="right"
		        android:text="@string/check"
		        android:layout_weight=".33"
		    />
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>
